# ProiectDSPLabs

./: README.md
Development/Sapatamana2/: Sapatamana2.atsln
Development/Saptamana1/: GccApplication4.atsln
Development/Saptamana10-2/: i2c.c  i2c.h  main.c  mpu6050.c  test1.uvgui.dspproject
Development/Saptamana11/: i2c.c  i2c.h  main.c  test1.uvgui.dspproject
Development/Saptamana12-2/: Startup.s  i2c.h  mpu6050.c  mpu6050.h
Development/Saptamana13/: i2c.c  main.c
Development/Saptamana14/: main.c
Development/Saptamana15/: main.c
Development/Saptamana15-2/: test1.uvgui.dspproject
Development/Saptamana16/: main.c  test1.uvopt
Development/Saptamana16-2/: main.c  test1.uvgui.dspproject
Development/Saptamana17/: test1.uvopt
Development/Saptamana18/: main.c  test1.uvopt
Development/Saptamana18-2/: mpu6050.h  test1.uvgui.dspproject
Development/Saptamana3/: Saptamana3.atsln
Development/Saptamana4/: main.c  prj2.uvproj
Development/Saptamana5/: main.c  serial.c
Development/Saptamana6/: adc.c  adc.h  test1.uvproj
Development/Saptamana7/: Startup.s  i2c.c  mpu6050.c  mpu6050.h  serial.c  test1.uvgui.dspproject  timer.h
Development/Saptamana8/: main.c  mpu6050.c
Development/Saptamana8-2/: main.c
Development/Saptamana9/: mpu6050.c  test1.uvgui.dspproject  test1.uvopt
MPU6050Driver/MPU6050FreeRTOS/: CMakeLists.txt
MPU6050Driver/MPU6050FreeRTOS/FreeRTOS/: FreeRTOSConfig.h  serial.c
MPU6050Driver/MPU6050FreeRTOS/JLink/: cmd.jlink
MPU6050Driver/MPU6050FreeRTOS/log/: log.h
MPU6050Driver/MPU6050FreeRTOS/src/: main.c
MPU6050Driver/MPU6050FreeRTOSSTM32/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  stm32f407g-disc1.ioc
MPU6050Driver/MPU6050NonBlocking/: main.c
MPU6050FreeRTOS/FreeRTOS/: serialISR.c
MPU6050FreeRTOS/includes/: SystemConfig.h
MPU6050FreeRTOS/startup/: crt0.S
MPU6050NonBlocking/: mpu6050.c
MPU6050NonBlocking/Objects/: test1.axf  test1.htm
Sapatamana2/Sapatamana2/: 7segment.c  7segment.h  Sapatamana2.componentinfo.xml  Sapatamana2.cproj  main.c  timer.c  timer.h
Saptamana1/GccApplication4/: Proiect4.2.componentinfo.xml  Proiect4.2.cproj  main.c
Saptamana10/: test1.uvgui.dspproject
Saptamana10-2/: mpu6050.h
Saptamana10-2/Objects/: i2c.crf  mpu6050.crf  test1.build_log.htm  test1.htm
Saptamana10/Objects/: main.crf  test1.axf  test1.build_log.htm  test1.htm  test1_Target 1.dep
Saptamana11/: mpu6050.c
Saptamana11/Listings/: test1.map
Saptamana11/Objects/: i2c.crf  test1.axf  test1.build_log.htm  test1.htm  test1_Target 1.dep
Saptamana12-2/: i2c.c  main.c  test1.uvgui.dspproject  test1.uvopt
Saptamana12-2/Listings/: startup.lst  test1.map
Saptamana12-2/Objects/: i2c.crf  mpu6050.crf  test1.axf  test1_Target 1.dep
Saptamana13/: test1.uvgui.dspproject
Saptamana13/Listings/: test1.map
Saptamana13/Objects/: i2c.crf  main.crf  mpu6050.crf  test1.build_log.htm
Saptamana14/: main.c  mpu6050.c  test1.uvgui.dspproject
Saptamana14/Listings/: test1.map
Saptamana14/Objects/: main.crf  test1.axf  test1.htm  test1_Target 1.dep
Saptamana15-2/: main.c
Saptamana15-2/Listings/: test1.map
Saptamana15-2/Objects/: main.crf  test1.axf  test1.htm
Saptamana16/: test1.uvgui.dspproject
Saptamana16-2/: test1.uvopt
Saptamana16-2/Listings/: test1.map
Saptamana16-2/Objects/: test1.build_log.htm  test1.htm
Saptamana16/Objects/: main.crf  test1.axf  test1.htm
Saptamana17/: main.c  test1.uvgui.dspproject
Saptamana17/Objects/: main.crf  serial.crf
Saptamana18/: mpu6050.c  test1.uvgui.dspproject  test1.uvproj
Saptamana18-2/Objects/: main.crf
Saptamana18/Listings/: test1.map
Saptamana18/Objects/: main.d  mpu6050.crf  test1.axf  test1.build_log.htm  test1_Target 1.dep
Saptamana2-2/: Saptamana2-2.atsln
Saptamana2-2/Saptamana2-2/: Saptamana2-2.componentinfo.xml  Serial.c  Serial.h  main.c
Saptamana3/Saptamana3/: Adc.c  Saptamana3.componentinfo.xml  Serial.c  Serial.h  main.c
Saptamana4/: prj2.uvopt
Saptamana5/: prj2.uvgui.dspproject  serial.h  test1.uvgui.dspproject  test1.uvopt  test1.uvproj
Saptamana5/Objects/: main.crf  main.d  serial.d  test1.axf  test1_Target 1.dep
Saptamana6/: main.c  serial.c  serial.h  test1.uvgui.dspproject  test1.uvopt  timer.c
Saptamana6/Objects/: main.crf  main.d  test1.axf  test1.build_log.htm
Saptamana7/: i2c.h  main.c
Saptamana8/: main.c  serial.c  serial.h  test1.uvgui.dspproject
Saptamana8-2/: test1.uvgui.dspproject
Saptamana9/: Retarget.c  main.c
(+155 files in other folders)
